--- a/lectures/09_interfaces.html
+++ b/lectures/09_interfaces.html
@@ -331,7 +331,7 @@ test the user statistics view of the user interface</p>
 <div class="columns mt-4">
 <div class="column" width="50%">
 <figure>
-<img src="figures/user_statistics/user_data_light.svg"
+<img src="figures/user_statistics/user_data_light.svg" width="375"
 alt="float: 0–1" />
 <figcaption aria-hidden="true">float: 0–1</figcaption>
 </figure>
@@ -339,7 +339,7 @@ alt="float: 0–1" />
 <div class="column" width="50%">
 <figure>
 <img src="figures/user_statistics/user_data_light_changed.svg"
-alt="integer: 0–100" />
+width="375" alt="integer: 0–100" />
 <figcaption aria-hidden="true">integer: 0–100</figcaption>
 </figure>
 </div>
@@ -353,7 +353,7 @@ pointless debugging)</p>
 </div>
 <h2 id="do-no-break-the-userland"><a class="header" href="#do-no-break-the-userland">do no break the userland</a></h2>
 <div class="columns">
-<div class="column" width="50%">
+<div class="column wide-quote mt-3" width="50%">
 <blockquote>
 <p>the number one rule of kernel development is that “we don’t break
 users”</p>
