--- a/slides/09_interfaces.html
+++ b/slides/09_interfaces.html
@@ -335,14 +335,14 @@ class="title-slide slide level1">
 <div class="columns mt-4">
 <div class="column" style="width:50%;">
 <figure>
-<img data-src="figures/user_statistics/user_data_light.svg"
+<img data-src="figures/user_statistics/user_data_light.svg" width="375"
 alt="float: 0–1" />
 <figcaption aria-hidden="true">float: 0–1</figcaption>
 </figure>
 </div><div class="column" style="width:50%;">
 <figure>
 <img data-src="figures/user_statistics/user_data_light_changed.svg"
-alt="integer: 0–100" />
+width="375" alt="integer: 0–100" />
 <figcaption aria-hidden="true">integer: 0–100</figcaption>
 </figure>
 </div>
@@ -358,7 +358,7 @@ pointless debugging)</p>
 <section id="do-no-break-the-userland" class="slide level2">
 <h2>do no break the userland</h2>
 <div class="columns">
-<div class="column" style="width:50%;">
+<div class="column wide-quote mt-3" style="width:50%;">
 <blockquote>
 <p>the number one rule of kernel development is that “we don’t break
 users”</p>
