deploy: f4b7927d1138bf364bb204baa7ff6a3539063bd3

--- a/lectures/12_clean_code.html
+++ b/lectures/12_clean_code.html
@@ -190,7 +190,7 @@ extend, etc.</p>
 <blockquote>
 <p>Any fool can write code that a computer can understand. Good
 programmers write code that humans can understand.</p>
-<p>– Martin Fowler (<strong>fowler2018refactoring?</strong>)</p>
+<p>– Martin Fowler (Fowler, 2018)</p>
 </blockquote>
 </div>
 <div class="mt-3">
@@ -1309,6 +1309,10 @@ line-spacing="2">
                     " class="uri">
 https://www.baeldung.com/cs/hungarian-notation
 </a>.</p>
+</div>
+<div id="ref-fowler2018refactoring" class="csl-entry">
+<p>Fowler, M. (2018). <em>Refactoring: Improving the design of existing code</em>.
+Addison-Wesley Professional.</p>
 </div>
 <div id="ref-martin2009clean" class="csl-entry">
 <p>Martin, R. C. (2009). <em>Clean code: A handbook of agile software
