--- a/lectures/description.html
+++ b/lectures/description.html
@@ -189,6 +189,49 @@ testing and automation.</p>
 <li>testing, working with legacy code</li>
 <li>CI, automatization, devops</li>
 </ol>
+<h2 id="evaluation"><a class="header" href="#evaluation">evaluation</a></h2>
+<p>the final grade is the weighted average of the requirements analysis
+(35%), the design (35%), and the midterm (30%)</p>
+<ul>
+<li>requirements analysis, software design: <strong>team work</strong></li>
+<li>midterm: <strong>individual</strong>
+<ul>
+<li>Moodle test</li>
+<li>50 random multiple-choice questions</li>
+</ul>
+</li>
+<li>each part should reach the minimum (&gt;50%)</li>
+</ul>
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: right;">score (%)</th>
+<th style="text-align: center;">grade</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: right;">0-50</td>
+<td style="text-align: center;">1</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">51-66</td>
+<td style="text-align: center;">2</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">67-76</td>
+<td style="text-align: center;">3</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">77-86</td>
+<td style="text-align: center;">4</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">87-100</td>
+<td style="text-align: center;">5</td>
+</tr>
+</tbody>
+</table>
 <h2 id="learning-outcomes"><a class="header" href="#learning-outcomes">learning outcomes</a></h2>
 <h3 id="skills"><a class="header" href="#skills">skills</a></h3>
 <ul>
