--- a/print.html
+++ b/print.html
@@ -537,6 +537,49 @@ testing and automation.</p>
 <li>testing, working with legacy code</li>
 <li>CI, automatization, devops</li>
 </ol>
+<h2 id="evaluation"><a class="header" href="#evaluation">evaluation</a></h2>
+<p>the final grade is the weighted average of the requirements analysis
+(35%), the design (35%), and the midterm (30%)</p>
+<ul>
+<li>requirements analysis, software design: <strong>team work</strong></li>
+<li>midterm: <strong>individual</strong>
+<ul>
+<li>Moodle test</li>
+<li>50 random multiple-choice questions</li>
+</ul>
+</li>
+<li>each part should reach the minimum (&gt;50%)</li>
+</ul>
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: right;">score (%)</th>
+<th style="text-align: center;">grade</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: right;">0-50</td>
+<td style="text-align: center;">1</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">51-66</td>
+<td style="text-align: center;">2</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">67-76</td>
+<td style="text-align: center;">3</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">77-86</td>
+<td style="text-align: center;">4</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">87-100</td>
+<td style="text-align: center;">5</td>
+</tr>
+</tbody>
+</table>
 <h2 id="learning-outcomes"><a class="header" href="#learning-outcomes">learning outcomes</a></h2>
 <h3 id="skills"><a class="header" href="#skills">skills</a></h3>
 <ul>
@@ -720,7 +763,7 @@ mapping</td>
 </tr>
 </tbody>
 </table>
-<h1 id="evaluation"><a class="header" href="#evaluation">evaluation</a></h1>
+<h1 id="evaluation-1"><a class="header" href="#evaluation-1">evaluation</a></h1>
 <div class="r-fit-text">
 <p>requirements analysis (35%) + design (35%) + midterm (30%)</p>
 </div>
@@ -7902,7 +7945,7 @@ extend, etc.</p>
 <blockquote>
 <p>Any fool can write code that a computer can understand. Good
 programmers write code that humans can understand.</p>
-<p>– Martin Fowler (<strong>fowler2018refactoring?</strong>)</p>
+<p>– Martin Fowler (Fowler, 2018)</p>
 </blockquote>
 </div>
 <div class="mt-3">
@@ -9021,6 +9064,10 @@ line-spacing="2">
                     " class="uri">
 https://www.baeldung.com/cs/hungarian-notation
 </a>.</p>
+</div>
+<div id="ref-fowler2018refactoring" class="csl-entry">
+<p>Fowler, M. (2018). <em>Refactoring: Improving the design of existing code</em>.
+Addison-Wesley Professional.</p>
 </div>
 <div id="ref-martin2009clean" class="csl-entry">
 <p>Martin, R. C. (2009). <em>Clean code: A handbook of agile software
