--- a/print.html
+++ b/print.html
@@ -380,11 +380,12 @@ by Joris van der Aalsvoort</li>
 <li><a href="https://effectiviology.com/brooks-law/">Brooks’ Law: Adding Manpower to a Late Project Makes It
 Later</a> - by Itamar Shatz</li>
 </ul>
-<h2 id="week-7"><a class="header" href="#week-7">week 7</a></h2>
+<h2 id="week-8"><a class="header" href="#week-8">week 8</a></h2>
 <ol>
 <li><a href="lectures/slides/summary_week06.html">week 6 summary</a></li>
 <li><a href="lectures/slides/11_wireframing.html">wireframing</a></li>
 <li><a href="lectures/slides/12_clean_code.html">clean code</a></li>
+<li><a href="lectures/slides/04_c4.html">C4 in practise</a></li>
 </ol>
 <h3 id="readings-6"><a class="header" href="#readings-6">readings</a></h3>
 <ul>
