deploy: 0170fe4f0cbeb7eb8f979eaf18c774e7a00ff8e2

--- a/slides/04_c4.html
+++ b/slides/04_c4.html
@@ -183,6 +183,9 @@ class="slide level2">
 height="425" /></p>
 </div>
 </div>
+<p><a
+href="https://excalidraw.com/#json=mE5CzLnnozx6w-Pjm36Pr,70ja8EODQBrBVSNrggSnAw">open
+in Excalidraw</a></p>
 </section></section>
 <section>
 <section id="level-3-component-diagram"
