deploy: c1cea3bcf4395e78a77b9962c1a3cb87d96848ef

--- a/slides/04_c4.html
+++ b/slides/04_c4.html
@@ -130,7 +130,8 @@ Model for Software Architecture</a></p>
 </div>
 </div><div class="column" style="width:30%;">
 <figure>
-<img data-src="c4/system_context.excalidraw.svg"
+<img
+data-src="../lectures/figures/user_statistics/system_context.excalidraw.svg"
 alt="open in Excalidraw" />
 <figcaption aria-hidden="true"><a
 href="https://excalidraw.com/#json=kH-voL6DzLoegPm8Xbo1B,u7q5iblpWLBuf_jyvkn-Dg">open
@@ -177,9 +178,12 @@ class="slide level2">
 <h2>container diagram of the flashcard application</h2>
 <div class="columns">
 <div class="column" style="width:35%;">
-<p><img data-src="c4/container.excalidraw.svg" height="375" /></p>
+<p><img
+data-src="../lectures/figures/user_statistics/container.excalidraw.svg"
+height="375" /></p>
 </div><div class="column fragment" style="width:65%;">
-<p><img data-src="c4/container_server_client.excalidraw.svg"
+<p><img
+data-src="../lectures/figures/user_statistics/container_server_client.excalidraw.svg"
 height="425" /></p>
 </div>
 </div>
