--- a/slides/10_planning.html
+++ b/slides/10_planning.html
@@ -826,7 +826,25 @@ the project on their own, but someone should mentor them. This may be
 considered as a part of the communication overhead, it is an important
 aspect.</p>
 </aside>
-<!-- ## what can be done? -->
+</section>
+<section id="what-can-be-done" class="slide level2">
+<h2>what can be done?</h2>
+<p>reduce stress/administrative burden, pointless meetings, create more
+relaxed environment instead of adding more people</p>
+<p>on the other hand, addig more resources (manpower) may help depending
+on</p>
+<ul>
+<li>attributes of the people who are being added to the project</li>
+<li>ways in which group members are expected to communicate</li>
+<li>reason why additional manpower is being added</li>
+<li>the overall team size don’t get too large</li>
+<li>group social dynamic, before and after the addition of new
+people</li>
+</ul>
+<div class="text-smaller mt-2">
+<p>source: <a
+href="https://effectiviology.com/brooks-law/">effectiviology.com/brooks-law</a></p>
+</div>
 <!-- Brooks' law says that it is impossible to measure useful work in man-months. -->
 </section>
 <section id="brooks-law-vs-torvalds-law" class="slide level2">
