deploy: 5d66d28db5a08da5ccbd87590f5e58df05fc4576

--- a/lectures/14_code_review.html
+++ b/lectures/14_code_review.html
@@ -703,7 +703,7 @@ Humans</a> (Hauer, 2018)</p>
 <li>a code can be not just okay, but worth to learn from it</li>
 </ul>
 </div>
-<div class="fragment text-align-left">
+<div class="fragment text-align-left mt-3">
 <ul>
 <li>however, when a reviewer too often says LGTM, it becomes fishy
 <ul>
@@ -734,15 +734,15 @@ point covered?</li>
 </div>
 </div>
 <h2 id="how-can-you-tell-if-the-code-matches-the-task"><a class="header" href="#how-can-you-tell-if-the-code-matches-the-task">how can you tell if the code matches the task?</a></h2>
-<div class="r-stack">
+<div class="r-stack mt-4">
 <p><img src="figures/traceability_via_commit_change.drawio.svg"
-width="800" /></p>
+width="950" /></p>
 <p><img src="figures/traceability_via_commit_parts.drawio.svg"
-class="fragment" data-fragment-index="1" width="800" /></p>
+class="fragment" data-fragment-index="1" width="950" /></p>
 <p><img src="figures/traceability_via_commit_message_parts.drawio.svg"
-class="fragment" data-fragment-index="2" width="800" /></p>
+class="fragment" data-fragment-index="2" width="950" /></p>
 <p><img src="figures/traceability_via_commit.drawio.svg" class="fragment"
-data-fragment-index="3" width="800" /></p>
+data-fragment-index="3" width="950" /></p>
 </div>
 <h2 id="how-to-write-the-commit-message"><a class="header" href="#how-to-write-the-commit-message">how to write the commit message?</a></h2>
 <div class="columns">
@@ -784,6 +784,19 @@ href="https://creativecommons.org/licenses/by-nc/2.5/deed.en">CC BY-NC 2.5</a>
 <div class="text-smaller">
 <p>source: <a href="https://chris.beams.io/posts/git-commit/">How to Write a Git Commit
 Message</a> (Beams, 2014)</p>
+</div>
+<h2 id="keeping-clean-history"><a class="header" href="#keeping-clean-history">keeping clean history</a></h2>
+<img src="figures/user_statistics/branching.svg" width="850" />
+<div class="text-smaller fragment">
+<ul>
+<li>features are often developed on separate feature branches</li>
+<li>after a feature is completed, the branch is merged</li>
+<li>as a feature branch may contain too much commits (detail)
+<ul>
+<li>commits on a feature branch often squashed into one commit</li>
+</ul>
+</li>
+</ul>
 </div>
 <h1 id="review-in-numbers"><a class="header" href="#review-in-numbers">review in numbers</a></h1>
 <div class="columns">
