--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -784,7 +784,7 @@ data-cites="hauer2018code">[5]</span></p>
 <li>a code can be not just okay, but worth to learn from it</li>
 </ul>
 </div>
-<div class="fragment text-align-left">
+<div class="fragment text-align-left mt-3">
 <ul>
 <li>however, when a reviewer too often says LGTM, it becomes fishy
 <ul>
@@ -818,16 +818,16 @@ point covered?</li>
 <section id="how-can-you-tell-if-the-code-matches-the-task"
 class="slide level2">
 <h2>how can you tell if the code matches the task?</h2>
-<div class="r-stack">
+<div class="r-stack mt-4">
 <p><img data-src="figures/traceability_via_commit_change.drawio.svg"
-width="800" /></p>
+width="950" /></p>
 <p><img data-src="figures/traceability_via_commit_parts.drawio.svg"
-class="fragment" data-fragment-index="1" width="800" /></p>
+class="fragment" data-fragment-index="1" width="950" /></p>
 <p><img
 data-src="figures/traceability_via_commit_message_parts.drawio.svg"
-class="fragment" data-fragment-index="2" width="800" /></p>
+class="fragment" data-fragment-index="2" width="950" /></p>
 <p><img data-src="figures/traceability_via_commit.drawio.svg"
-class="fragment" data-fragment-index="3" width="800" /></p>
+class="fragment" data-fragment-index="3" width="950" /></p>
 </div>
 </section>
 <section id="how-to-write-the-commit-message" class="slide level2">
@@ -869,6 +869,21 @@ href="https://creativecommons.org/licenses/by-nc/2.5/deed.en">CC BY-NC 2.5</a>
 <p>source: <a href="https://chris.beams.io/posts/git-commit/">How to
 Write a Git Commit Message</a> <span class="citation"
 data-cites="beams2014how">[7]</span></p>
+</div>
+</section>
+<section id="keeping-clean-history" class="slide level2">
+<h2>keeping clean history</h2>
+<p><img data-src="figures/user_statistics/branching.svg"
+width="850" /></p>
+<div class="text-smaller fragment">
+<ul>
+<li>features are often developed on separate feature branches</li>
+<li>after a feature is completed, the branch is merged</li>
+<li>as a feature branch may contain too much commits (detail)
+<ul>
+<li>commits on a feature branch often squashed into one commit</li>
+</ul></li>
+</ul>
 </div>
 </section></section>
 <section id="review-in-numbers" class="title-slide slide level1">
