deploy: 9d0f2f2e2df00eabc5baaf950bb1a5ff7baaf57e

--- a/print.html
+++ b/print.html
@@ -11062,6 +11062,35 @@ int main (void) {
 <p><img src="lectures/figures/india_cleaner.png" alt="" /></p>
 </div>
 </div>
+<h1 id="summary-2"><a class="header" href="#summary-2">summary</a></h1>
+<ul>
+<li>(code) review is for improving (code) quality
+<ul>
+<li>finding issues as early as possible</li>
+</ul>
+</li>
+<li>applies to every output element of the development process
+<ul>
+<li>V-model</li>
+<li>requirement analysis can be reviewed</li>
+<li>for design: risk storming</li>
+<li>for code review, four formality level
+<ul>
+<li>informal, walkthrough, technical, inspection</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>be open to feedback, try to learn from the review</li>
+<li>the subject of the code review is not you, but your code
+<ul>
+<li>use I-messages</li>
+<li>talk about the code, not the coder</li>
+<li>ask questions</li>
+<li>don’t forget to praise</li>
+</ul>
+</li>
+</ul>
 <h1 id="references-12"><a class="header" href="#references-12">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
