--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -982,6 +982,34 @@ CC BY-SA 2.5</p>
 </div>
 </div>
 </section></section>
+<section id="summary" class="title-slide slide level1">
+<h1>summary</h1>
+<ul>
+<li>(code) review is for improving (code) quality
+<ul>
+<li>finding issues as early as possible</li>
+</ul></li>
+<li>applies to every output element of the development process
+<ul>
+<li>V-model</li>
+<li>requirement analysis can be reviewed</li>
+<li>for design: risk storming</li>
+<li>for code review, four formality level
+<ul>
+<li>informal, walkthrough, technical, inspection</li>
+</ul></li>
+</ul></li>
+<li>be open to feedback, try to learn from the review</li>
+<li>the subject of the code review is not you, but your code
+<ul>
+<li>use I-messages</li>
+<li>talk about the code, not the coder</li>
+<li>ask questions</li>
+<li>don’t forget to praise</li>
+</ul></li>
+</ul>
+</section>
+
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
 <div id="refs" class="references csl-bib-body" role="list">
